--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "express": "^4.21.2",
     "mysql2": "^3.12.0",
     "react-router-dom": "^7.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
