--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,16 @@
   "description": "DealSeeker Backend",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "import-data": "node scripts/importData.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "import-products": "node scripts/importProducts.js",
+    "import-demo": "node scripts/importDemoData.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
     "mysql2": "^3.12.0"
