--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "mysql2": "^3.12.0",
+    "node-cron": "^3.0.3",
     "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
