--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "import-products": "node scripts/importProducts.js",
-    "import-demo": "node scripts/importDemoData.js"
+    "import-demo": "node scripts/importDemoData.js",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,7 @@
     "mysql2": "^3.12.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "jest": "^29.0.0"
   }
 }
