--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
+    "axios": "^1.7.9",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9"
   }
 }
