--- a/backend/package.json
+++ b/backend/package.json
@@ -15,13 +15,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.0.0"
+    "jest": "^29.0.0",
+    "nodemon": "^3.0.2"
   }
 }
