--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "fs": "^0.0.1-security",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.12.0"
+    "mysql2": "^3.6.0"
   },
   "devDependencies": {
     "jest": "^29.0.0",
